# simple_crud_task_manager

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
crud_task_manager/: .gitignore  manage.py
crud_task_manager/crud_task_manager/: asgi.py  settings.py  urls.py  wsgi.py
crud_task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
crud_task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_expected_finish_alter_task_start.py  0003_remove_task_description_remove_task_expected_finish_and_more.py
crud_task_manager/tasks/templates/tasks/: add_task.html  base.html  delete_task.html  finish_task.html  task_list.html  update_task.html
