[tool.poetry]
name = "crud-task-manager"
version = "0.1.0"
description = ""
authors = ["Kristyna Sodomkova <kristyna@verotel.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
